- Clean up - Decoupled icon paths using IconConfig.java - Friendly AwtEvents desc using AwtKeyMapper - Mapping NativeInput evt using NativeInputTranslator Strategy DP - Publishing Recording and Simulation events using Observer Pattern - Refactored macro replay using AbstractEventSimulator.java Strategy DP - New style for window controls