@@ -1,44 +1,35 @@
 package com.mac.model;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import lombok.Getter;
+import lombok.Setter;
+
 import java.util.List;
 import java.util.UUID;
 
+@Getter
+@Setter
 public class Macro {
 
     private final UUID id;
     private final String name;
-    private final List<MacroAction> actions;
+    private final List<Action> actions;
 
-    public Macro(String name, List<MacroAction> actions) {
+    public Macro(String name, List<Action> actions) {
         this.id = UUID.randomUUID();
         this.name = name;
-        this.actions = Collections.unmodifiableList(new ArrayList<>(actions));
-    }
-
-    public UUID getId() {
-        return id;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public List<MacroAction> getActions() {
-        return actions;
+        this.actions = List.copyOf(actions);
     }
 
     public String getSummary() {
-        return actions.size() + " actions";
+        return actions.size() + " events";
     }
 
     public String detailedString() {
         StringBuilder sb = new StringBuilder();
         sb.append("Macro: ").append(name).append("\n");
         sb.append("ID: ").append(id).append("\n");
-        sb.append("Actions:\n");
-        for (MacroAction a : actions) sb.append("  - ").append(a.toString()).append("\n");
+        sb.append("Events:\n");
+        for (Action e : actions) sb.append("  - ").append(e.toString()).append("\n");
         return sb.toString();
     }
 
